--- a/gfarm_v2/trunk/man/man5/gfarm2.conf.5
+++ b/gfarm_v2/trunk/man/man5/gfarm2.conf.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM2.CONF" "5" "08 March 2010" "Gfarm" ""
+.TH "GFARM2.CONF" "5" "12 April 2010" "Gfarm" ""
 
 .SH NAME
 gfarm2.conf \- Gfarm configuration file
@@ -690,6 +690,17 @@ For example,
 	minimum_free_disk_space 1G
 .fi
 .TP
+\fBsimultaneous_replication_receivers \fInumber\fB\fR
+This directive specifies maximum number of simultaneous
+gfmd-initiated replications to same host.
+The default is 20.
+
+For example,
+
+.nf
+	simultaneous_replication_receivers 40
+.fi
+.TP
 \fBgfsd_connection_cache \fInumber\fB\fR
 This directive specifies maximum number of cached gfsd connections.
 The default is 16.
@@ -792,6 +803,7 @@ notation.
 		\~\~<schedule_busy_load_thresh_statement> |
 		\~\~<schedule_virtual_load_statement> |
 		\~\~<minimum_free_disk_space_statement> |
+		\~\~<simultaneous_replication_receivers> |
 		\~\~<gfsd_connection_cache_statement> |
 		\~\~<attr_cache_limit_statement> |
 		\~\~<attr_cache_timeout_statement> |
@@ -853,6 +865,7 @@ notation.
 	<schedule_virtual_load_statement> ::= "schedule_virtual_load" <load>
 	<minimum_free_disk_space_statement> ::=
 		\~\~"minimum_free_disk_space" <size>
+	<simultaneous_replication_receivers> ::= "simultaneous_replication_receivers" <number>
 	<gfsd_connection_cache_statement> ::= "gfsd_connection_cache" <number>
 	<attr_cache_limit_statement> ::= "attr_cache_limit" <number>
 	<attr_cache_timeout_statement> ::= "attr_cache_timeout" <number>
