--- a/gfarm_v2/branches/2.3.2/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/branches/2.3.2/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
@@ -1085,6 +1085,36 @@ level 2 additionally outputs the function name.
 </listitem>
 </varlistentry>
 
+<varlistentry>
+<term><token>no_file_system_node_timeout</token> <parameter>seconds</parameter></term>
+<listitem>
+<para>If there is no file system node available,
+Gfarm client library periodically tries to find a file system node.
+This directive specifies the timeout to try in seconds.
+The default is 30 seconds.
+</para>
+<para>For example,</para>
+<literallayout>
+	no_file_system_node_timeout 30
+</literallayout>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><token>gfmd_reconnection_timeout</token> <parameter>seconds</parameter></term>
+<listitem>
+<para>If the connection to the metadata server is disconnected,
+Gfarm client library periodically tries to reconnect.
+This directive specifies the timeout to try in seconds.
+The default is 30 seconds.
+</para>
+<para>For example,</para>
+<literallayout>
+	gfmd_reconnection_timeout 30
+</literallayout>
+</listitem>
+</varlistentry>
+
 <!--
 <varlistentry>
 <term><token>record_atime </token><parameter>validity</parameter></term>
@@ -1235,6 +1265,8 @@ notation.</para>
 	&lt;attr_cache_timeout_statement&gt; ::= "attr_cache_timeout" &lt;number&gt;
 	&lt;log_level_statement&gt; ::= "log_level" &lt;log_priority&gt;
 	&lt;log_message_verbose_level_statement&gt; ::= "log_message_verbose_level" &lt;number&gt;
+	&lt;no_file_system_node_timeout_statement&gt; ::= "no_file_system_node_timeout" &lt;number&gt;
+	&lt;gfmd_reconnection_timeout_statement&gt; ::= "gfmd_reconnection_timeout" &lt;number&gt;
 <!--	&lt;record_atime_statement&gt; ::= "record_atime" &lt;validity&gt; -->
 	&lt;hostspec&gt; ::= &lt;ipv4_address&gt; | &lt;ipv4_address&gt; "/" &lt;address_mask&gt; |
 		&nbsp;&nbsp;&lt;hostname&gt; | "." &lt;domain_name&gt; | "*"
