--- a/gfarm_v2/trunk/doc/docbook/en/ref/man3/gfarm.3.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man3/gfarm.3.docbook
@@ -2,7 +2,7 @@
 
 <refentry id='gfarm.3'>
 
-<refentryinfo><date>22 Aug 2005</date></refentryinfo>
+<refentryinfo><date>26 Jun 2010</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfarm</refentrytitle>
@@ -12,7 +12,7 @@
 
 <refnamediv id='name'>
 <refname>gfarm</refname>
-<refpurpose>Gfarm native API library</refpurpose>
+<refpurpose>Gfarm file system API library</refpurpose>
 </refnamediv>
 <refsynopsisdiv id='synopsis'>
 <synopsis>
@@ -25,9 +25,8 @@
 
 <refsect1 id='description'><title>DESCRIPTION</title>
 <para>The Gfarm library provides an interface layer to
-the gfarm filesystem. This manual only gives an overview of the
-library, please use manual pages of each functions to see the
-detail of the functions.
+the Gfarm file system.  This manual gives an overview of the
+library.  For details, refer to a manual page of each function.
 </para>
 
 <refsect2>
@@ -46,11 +45,6 @@ library, and
 <refsect2>
 <title>File input/output operations</title>
 <para>
-<citerefentry>
-<refentrytitle>gfs_pio_set_local</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> function specifies current node number and total number
-of nodes as an initialization step of a parallel process.
-
 To open an existing file as a stream,
 <citerefentry>
 <refentrytitle>gfs_pio_open</refentrytitle><manvolnum>3</manvolnum>
@@ -62,12 +56,6 @@ To create an file and open the file as a stream,
 <citerefentry>
 <refentrytitle>gfs_pio_close</refentrytitle><manvolnum>3</manvolnum>
 </citerefentry> function is used to close such streams.
-<citerefentry>
-<refentrytitle>gfs_pio_set_view_index</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> function and
-<citerefentry>
-<refentrytitle>gfs_pio_set_view_local</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> function specifies an access method of a parallel file.
 </para>
 
 <para>
@@ -87,10 +75,10 @@ which is opened for read, already reaches end-of-file or not.
 <para>
 <citerefentry>
 <refentrytitle>gfs_pio_getc</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> functions reads a character from a stream, and
+</citerefentry> function reads a character from a stream, and
 <citerefentry>
 <refentrytitle>gfs_pio_ungetc</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> functions puts back a character to a stream.
+</citerefentry> function puts back a character to a stream.
 <citerefentry>
 <refentrytitle>gfs_pio_getline</refentrytitle><manvolnum>3</manvolnum>
 </citerefentry> function,
@@ -106,7 +94,7 @@ which is opened for read, already reaches end-of-file or not.
 specified by the function argument, appears.
 <citerefentry>
 <refentrytitle>gfs_pio_read</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> functions reads specified bytes from a stream.
+</citerefentry> function reads specified bytes from a stream.
 </para>
 
 <para>
@@ -140,6 +128,7 @@ specified by the function argument, appears.
 
 <refsect2>
 <title>Directory access</title>
+<!--
 <para>
 <citerefentry>
 <refentrytitle>gfs_chdir</refentrytitle><manvolnum>3</manvolnum>
@@ -148,7 +137,7 @@ specified by the function argument, appears.
 <refentrytitle>gfs_realpath</refentrytitle><manvolnum>3</manvolnum>
 </citerefentry> function returns full pathname of the argument.
 </para>
-
+ -->
 <para>
 <citerefentry>
 <refentrytitle>gfs_opendir</refentrytitle><manvolnum>3</manvolnum>
@@ -162,7 +151,7 @@ specified by the function argument, appears.
 </para>
 
 <para>
-A gfs_glob_t data, which is initilized by
+A gfs_glob_t data, which is initialized by
 <citerefentry>
 <refentrytitle>gfs_glob_init</refentrytitle><manvolnum>3</manvolnum>
 </citerefentry> function,
@@ -187,14 +176,12 @@ The gfs_glob_t must be released by
 <citerefentry>
 <refentrytitle>gfs_chmod</refentrytitle><manvolnum>3</manvolnum>
 </citerefentry> function changes the mode of a file, and
-<!--
 <citerefentry>
 <refentrytitle>gfs_chown</refentrytitle><manvolnum>3</manvolnum>
 </citerefentry> function changes the owner of a file, and
--->
 <citerefentry>
 <refentrytitle>gfs_utimes</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> function changes file's modified time and access time.
+</citerefentry> function changes file's modification time and access time.
 </para>
 
 <para>
@@ -207,10 +194,6 @@ The gfs_glob_t must be released by
 <citerefentry>
 <refentrytitle>gfs_unlink</refentrytitle><manvolnum>3</manvolnum>
 </citerefentry> function removes a file, and
-<citerefentry>
-<refentrytitle>gfs_unlink_section</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> function removes a fragment which is a member of
-a parallel file.
 <citerefentry>
 <refentrytitle>gfs_rename</refentrytitle><manvolnum>3</manvolnum>
 </citerefentry> function renames a file or a directory.
@@ -229,26 +212,20 @@ The struct gfs_stat returned by gfs_stat function must be released by
 </refsect2>
 
 <refsect2>
-<title>Utility functions</title>
+<title>Error handling</title>
 <para>
+Most Gfarm API returns the Gfarm error code in gfarm_error_t.
 <citerefentry>
-<refentrytitle>gfarm_hostlist_read</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> function,
+<refentrytitle>gfarm_error_string</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function returns a string describing the Gfarm error code.
 <citerefentry>
-<refentrytitle>gfarm_import_fragment_config_read</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> function, and
+<refentrytitle>gfarm_errno_to_error</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function translates the error number (errno) to the Gfarm
+error code.
 <citerefentry>
-<refentrytitle>gfarm_import_fragment_size_alloc</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> function are utility functions used to register
-a file as a fragmented parallel file. Please see the source code of
-<citerefentry>
-<refentrytitle>gfimport_text</refentrytitle><manvolnum>1</manvolnum>
-</citerefentry> command and
-<citerefentry>
-<refentrytitle>gfimport_fixed</refentrytitle><manvolnum>1</manvolnum>
-</citerefentry> command as an example how to use these functions.
+<refentrytitle>gfarm_error_to_errno</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function translates the Gfarm error code to the error number.
 </para>
-
 </refsect2>
 
 <refsect2>
@@ -318,34 +295,6 @@ The type of the return value is a pointer to pointer to a character.
 
 </varlistentry>
 </variablelist>
-
-</refsect2>
-
-<refsect2>
-<title>Internal functions</title>
-
-<para>
-<citerefentry>
-<refentrytitle>gfarm_url_program_register</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> function,
-<citerefentry>
-<refentrytitle>gfarm_url_hosts_schedule</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> function,
-<citerefentry>
-<refentrytitle>gfarm_url_fragments_replicate</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> function,
-<citerefentry>
-<refentrytitle>gfarm_url_program_deliver</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> function,
-<citerefentry>
-<refentrytitle>gfarm_url_section_replicate_from_to</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> function, and
-<citerefentry>
-<refentrytitle>gfarm_url_section_replicate_to</refentrytitle><manvolnum>3</manvolnum>
-</citerefentry> functions are internal functions of Gfarm.
-These manual are provided by historical reasons, but these specification
-may be changed later.
-</para>
 
 </refsect2>
 
