--- a/gfarm_v2/trunk/doc/docbook/ja/ref/man3/gfs_pio_open.3.docbook
+++ b/gfarm_v2/trunk/doc/docbook/ja/ref/man3/gfs_pio_open.3.docbook
@@ -2,7 +2,7 @@
 
 <refentry id='gfs-pio-open.3'>
 
-<refentryinfo><date>30 Oct 2004</date></refentryinfo>
+<refentryinfo><date>26 Jun 2010</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfs_pio_open</refentrytitle>
@@ -12,7 +12,7 @@
 
 <refnamediv id='name'>
 <refname>gfs_pio_open</refname>
-<refpurpose>Gfarmファイルのオープン</refpurpose>
+<refpurpose>Gfarmファイルシステムのファイルのオープン</refpurpose>
 </refnamediv>
 <refsynopsisdiv id='synopsis'>
 <funcsynopsis>
@@ -21,12 +21,11 @@
 </funcsynopsisinfo>
 
 <funcprototype>
-  <funcdef><function><returnvalue>char *</returnvalue>gfs_pio_open</function></funcdef>
-    <paramdef>char * <parameter>gfarm_url</parameter></paramdef>
+  <funcdef><function><returnvalue>gfarm_error_t</returnvalue> gfs_pio_open</function></funcdef>
+    <paramdef>const char * <parameter>gfarm_url</parameter></paramdef>
     <paramdef>int <parameter>flags</parameter></paramdef>
     <paramdef>GFS_File * <parameter>gfp</parameter></paramdef>
 </funcprototype>
-
 
 </funcsynopsis>
 </refsynopsisdiv>
@@ -34,11 +33,15 @@
 <!-- body begins here -->
 
 <refsect1 id='description'><title>DESCRIPTION</title>
-<para>指定した
+<para>
 <parameter>gfarm_url</parameter>
-ファイルをオープンし、GFS_File 構造体を
+で指定したファイルをオープンし、GFS_File 構造体を
 <parameter>gfp</parameter>
 の指す先に返します。
+<parameter>gfarm_url</parameter>
+はGfarmファイルシステムのパス名、あるいは
+gfarm://metaserver:port/path/name
+形式のGfarm URLです。
 </para>
 
 <para>
@@ -68,16 +71,20 @@
 <varlistentry>
 <term><constant>GFARM_FILE_TRUNC</constant></term>
 <listitem>
-<para>ファイルが存在し，レギュラーファイルで、書込みが許される場合、ファイルサイズを0にします。</para>
+<para>ファイルが存在し、レギュラーファイルで書込みが許される場合、ファイルサイズを0にします。</para>
 </listitem>
 </varlistentry>
+<!--
 <varlistentry>
 <term><constant>GFARM_FILE_APPEND</constant></term>
 <listitem>
 <para>ファイルをアペンドモードでオープンします。</para>
 </listitem>
 </varlistentry>
+ -->
 </variablelist>
+
+<!--
 <para>
 以下のフラグは効率的な実行のためのヒントとして指定することができます。
 </para>
@@ -117,49 +124,34 @@
 <constant>GFARM_FILE_REPLICATION</constant>と
 <constant>GFARM_FILE_NOT_REPLICATION</constant>は同時に指定することはできません。
 </para>
-
-<para>gfrun(3) や gfmpirun_p4(3) で起動された並列プロセスで
-<function>gfs_pio_open()</function>
-を呼ぶ場合、それぞれのプロセスの
-<parameter>GFS_File</parameter>
-構造体は個別ファイルポインタを持ちます。</para>
+ -->
 
 </refsect1>
 
 <refsect1 id='return-values'><title>RETURN VALUES</title>
 <variablelist>
 <varlistentry>
-<term><constant>NULL</constant></term>
+<term><constant>GFARM_ERR_NO_ERROR</constant></term>
 <listitem>
 <para>正常終了を示します。</para>
 </listitem>
 </varlistentry>
 <varlistentry>
-<term><constant>GFARM_ERR_NO_MEMORY</constant></term>
-<listitem>
-<para>メモリ不足のため処理を中止しました。</para>
-</listitem>
-</varlistentry>
-<varlistentry>
-<term><constant>GFARM_ERR_AUTHENTICATION</constant></term>
-<listitem>
-<para>gfmd(8) あるいは gfsd(8) に対するユーザー認証が失敗しました。</para>
-</listitem>
-</varlistentry>
-<varlistentry>
-<term><constant>GFARM_ERR_PERMISSION_DENIED</constant></term>
-<listitem>
-<para><parameter>gfarm_url</parameter>へ、
-<parameter>flags</parameter>
-で指定されたモードでアクセスする権限が、ありません。</para>
-</listitem>
-</varlistentry>
-<varlistentry>
 <term><constant>GFARM_ERR_IS_A_DIRECTORY</constant></term>
 <listitem>
-<para>指定された
-<parameter>gfarm_url</parameter>
-は、ディレクトリです。</para>
+<para>指定されたファイルはディレクトリです。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_IS_A_SYMBOLIC_LINK</constant></term>
+<listitem>
+<para>指定されたファイルはシンボリックリンクです。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_OPERATION_NOT_PERMITTED</constant></term>
+<listitem>
+<para>指定されたファイルはファイルではありません。</para>
 </listitem>
 </varlistentry>
 <varlistentry>
@@ -171,8 +163,99 @@
 <varlistentry>
 <term><constant>GFARM_ERR_NOT_A_DIRECTORY</constant></term>
 <listitem>
-<para>指定したパス名の親ディレクトリが、実際にはディレクトリでなかったことを
-示します。</para>
+<para>指定したパス名の親ディレクトリが、ディレクトリではありません。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_NO_MEMORY</constant></term>
+<listitem>
+<para>メモリ不足のため処理を中止しました。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_INVALID_ARGUMENT</constant></term>
+<listitem>
+<para><parameter>flags</parameter>
+の指定が不正です。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_GFARM_URL_HOST_IS_MISSING</constant></term>
+<listitem>
+<para><parameter>gfarm_url</parameter>
+で指定されたGfarm URLにおいて、
+メタデータサーバが指定されていません。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_GFARM_URL_PORT_IS_MISSING</constant></term>
+<listitem>
+<para><parameter>gfarm_url</parameter>
+で指定されたGfarm URLにおいて、
+メタデータサーバのポート番号が指定されていません。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_UNKNOWN_HOST</constant></term>
+<listitem>
+<para>指定されたメタデータサーバのアドレス解決ができません。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_TOO_MANY_OPEN_FILES</constant></term>
+<listitem>
+<para>プロセスにおけるオープン可能なファイル数の限界に達しました。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_TOO_MANY_OPEN_FILES_IN_SYSTEM</constant></term>
+<listitem>
+<para>システムにおけるオープンできるファイル数の限界に達しました。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_NETWORK_IS_UNREACHABLE</constant></term>
+<listitem>
+<para>メタデータサーバに到達できません。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_OPERATION_TIMED_OUT</constant></term>
+<listitem>
+<para>メタデータサーバへの接続がタイムアウトをおこしました。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_PROTOCOL</constant></term>
+<listitem>
+<para>メタデータサーバとの通信にプロトコルエラーが発生しました。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_BROKEN_PIPE</constant></term>
+<listitem>
+<para>メタデータサーバとの通信が切断しました。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_PERMISSION_DENIED</constant></term>
+<listitem>
+<para>指定されたファイルに対し、
+<parameter>flags</parameter>
+で指定されたモードでアクセスする権限がないか、
+メタデータサーバへの認証に失敗しました。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_PROTOCOL_NOT_SUPPORTED</constant></term>
+<listitem>
+<para>指定された認証プロトコルはサポートしていません。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_AUTHENTICATION</constant></term>
+<listitem>
+<para>メタデータサーバに対する認証に失敗しました。</para>
 </listitem>
 </varlistentry>
 <!--
@@ -182,11 +265,14 @@
 <para>指定したパス名は読み込み専用ファイルシステム上にあります。</para>
 </listitem>
 </varlistentry>
--->
+ -->
 <varlistentry>
 <term>その他</term>
 <listitem>
-<para>上記以外のエラーが生じたことを示します。</para>
+<para>上記以外のエラーが生じたことを示します。
+<citerefentry><refentrytitle>gfarm_error_string</refentrytitle><manvolnum>3</manvolnum></citerefentry>
+によりエラーの原因を文字列に変換することができます。
+</para>
 </listitem>
 </varlistentry>
 </variablelist>
@@ -207,8 +293,6 @@
 <citerefentry><refentrytitle>gfs_pio_puts</refentrytitle><manvolnum>3</manvolnum></citerefentry>,
 <citerefentry><refentrytitle>gfs_pio_read</refentrytitle><manvolnum>3</manvolnum></citerefentry>,
 <citerefentry><refentrytitle>gfs_pio_seek</refentrytitle><manvolnum>3</manvolnum></citerefentry>,
-<citerefentry><refentrytitle>gfs_pio_set_view_index</refentrytitle><manvolnum>3</manvolnum></citerefentry>,
-<citerefentry><refentrytitle>gfs_pio_set_view_local</refentrytitle><manvolnum>3</manvolnum></citerefentry>,
 <citerefentry><refentrytitle>gfs_pio_ungetc</refentrytitle><manvolnum>3</manvolnum></citerefentry>,
 <citerefentry><refentrytitle>gfs_pio_write</refentrytitle><manvolnum>3</manvolnum></citerefentry>
 </para>
